# kms-interface

./: .gitignore  .gitreview  CMakeLists.txt  Home.md  README.md  build.sh  kms_interface_config.h.cmake  pom.xml
debian/: changelog  control  copyright  rules
src/main/thrift/: HttpEndPointType.thrift  JackVaderFilterType.thrift  KmsMediaChromaFilterType.thrift  KmsMediaCompositeMixerType.thrift  KmsMediaComputerVision.thrift  KmsMediaCrowdDetectorFilterType.thrift  KmsMediaDispatcherMixerType.thrift  KmsMediaErrorCodes.thrift  KmsMediaFaceOverlayFilterType.thrift  KmsMediaGStreamerFilterType.thrift  KmsMediaHandler.thrift  KmsMediaHttpEndPointType.thrift  KmsMediaHttpGetEndPointType.thrift  KmsMediaHttpPostEndPointType.thrift  KmsMediaMainMixerType.thrift  KmsMediaMixerEndPointType.thrift  KmsMediaMixerPortType.thrift  KmsMediaObject.thrift  KmsMediaPlateDetectorFilterType.thrift  KmsMediaPlayerEndPointType.thrift  KmsMediaPointerDetector2FilterType.thrift  KmsMediaPointerDetectorFilterType.thrift  KmsMediaProfile.thrift  KmsMediaRecorderEndPointType.thrift  KmsMediaRecordingProfile.thrift  KmsMediaRtpEndPointType.thrift  KmsMediaSdpEndPointType.thrift  KmsMediaServer.thrift  KmsMediaSessionEndPointType.thrift  KmsMediaUriEndPointType.thrift  KmsMediaWebRtcEndPointType.thrift  KmsMediaZBarFilterType.thrift  MediaSessionEndPointType.thrift  PlayerEndPointType.thrift  SdpEndPointType.thrift  WebRtcEndPointType.thrift  ZBarFilterType.thrift  common.thrift  dataTypes.thrift  errorCodes.thrift  (+12 more)
